docs/apache-airflow-providers-google/11.0.0/_sources/_api/tests/system/google/cloud/bigquery/example_bigquery_to_mssql/index.rst.txt
:py:mod:`tests.system.google.cloud.bigquery.example_bigquery_to_mssql`
======================================================================

.. py:module:: tests.system.google.cloud.bigquery.example_bigquery_to_mssql

.. autoapi-nested-parse::

   Example Airflow DAG for Google BigQuery service.

   This DAG relies on the following OS environment variables

   * AIRFLOW__API__GOOGLE_KEY_PATH - Path to service account key file. Note, you can skip this variable if you
     run this DAG in a Composer environment.



Module Contents
---------------

.. py:data:: ENV_ID

   

.. py:data:: PROJECT_ID

   

.. py:data:: DAG_ID
   :value: 'bigquery_to_mssql'

   

.. py:data:: REGION
   :value: 'us-west2'

   

.. py:data:: ZONE

   

.. py:data:: NETWORK
   :value: 'default'

   

.. py:data:: CONNECTION_ID

   

.. py:data:: CONNECTION_TYPE
   :value: 'mssql'

   

.. py:data:: BIGQUERY_DATASET_NAME

   

.. py:data:: BIGQUERY_TABLE
   :value: 'table_42'

   

.. py:data:: INSERT_ROWS_QUERY

   

.. py:data:: DB_PORT
   :value: 1433

   

.. py:data:: DB_USER_NAME
   :value: 'sa'

   

.. py:data:: DB_USER_PASSWORD
   :value: '5FHq4fSZ85kK6g0n'

   

.. py:data:: SETUP_MSSQL_COMMAND

   

.. py:data:: SQL_TABLE
   :value: 'test_table'

   

.. py:data:: SQL_CREATE_TABLE

   

.. py:data:: GCE_MACHINE_TYPE
   :value: 'n1-standard-1'

   

.. py:data:: GCE_INSTANCE_NAME

   

.. py:data:: GCE_INSTANCE_BODY

   

.. py:data:: FIREWALL_RULE_NAME

   

.. py:data:: CREATE_FIREWALL_RULE_COMMAND

   

.. py:data:: DELETE_FIREWALL_RULE_COMMAND

   

.. py:data:: DELETE_PERSISTENT_DISK_COMMAND

   

.. py:data:: log

   

.. py:data:: create_bigquery_dataset

   

.. py:data:: test_run

   

